# social

./: .env.example  .gitignore  Dockerfile  README.md  cert.crt  cert.key  entrypoint.sh  manage.py  pyproject.toml
account/: authentication.py  models.py  urls.py  views.py
account/templates/account/: dashboard.html
account/templates/registration/: login.html  password_reset_confirm.html
actions/: utils.py
apps/account/: forms.py  views.py
apps/account/templates/: base.html
apps/actions/: models.py
apps/actions/migrations/: 0002_alter_action_options.py  0003_action_target_ct_action_target_id_alter_action_verb_and_more.py
apps/images/: admin.py  apps.py  forms.py  models.py  views.py
apps/images/migrations/: 0002_remove_image_images_imag_created_6393be_idx_and_more.py
bookmarks/: .gitignore  .pre-commit-config.yaml  Makefile  asgi.py  cert.crt  cert.key  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt  urls.py  wsgi.py
bookmarks/account/: authentication.py  forms.py  models.py  urls.py  views.py
bookmarks/account/migrations/: 0001_initial.py  0002_contact_contact_account_con_created_8bdae6_idx.py
bookmarks/account/templates/: base.html
bookmarks/actions/: models.py
bookmarks/bookmarks/: settings.py  urls.py
bookmarks/docker_compose/: app.yaml  storages.yaml
bookmarks/images/: admin.py  apps.py  forms.py  models.py  views.py
docker_compose/: redis.yaml
images/: apps.py  urls.py  views.py
images/templates/: bookmarklet_launcher.js
project/: asgi.py  settings.py  urls.py  wsgi.py
(+14 files in other folders)
