[tool.poetry]
name = "social"
version = "0.1.0"
description = "Social website"
authors = ["pelkoa-glitch <hvngmvnvibe@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.4.0"
sqlparse = "^0.5.1"
social-auth-app-django = "^5.4.2"
django-extensions = "^3.2.3"
werkzeug = "^3.0.4"
pyopenssl = "^24.2.1"
requests = "^2.32.3"
easy-thumbnails = "^2.9"
django-environ = "^0.11.2"
redis = "^5.0.8"
django = "4.2.9"
psycopg2-binary = "^2.9.9"
python-slugify = "^8.0.4"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
isort = "^5.13.2"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
multi_line_output=3
include_trailing_comma=true
line_length=120
lines_after_imports=2
lines_between_sections=1
lines_between_types=0
force_alphabetical_sort_within_sections=true
ensure_newline_before_comments=true
combine_as_imports=true
combine_star=true
skip_gitignore=true
balanced_wrapping=true
force_grid_wrap=2
src_paths=["core", ]
skip_glob=[
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
]
known_django=["django","ninja"]
known_first_party=["core"]
sections=[
    "FUTURE",
    "STDLIB",
    "DJANGO",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
